// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack/one-amex.base should add loader options plugin in production 1`] = `
Array [
  EnvironmentPlugin {
    "defaultValues": Object {},
    "keys": Array [
      "NODE_ENV",
    ],
  },
  ESLintWebpackPlugin {
    "key": "ESLintWebpackPlugin",
    "options": Object {
      "allowInlineConfig": false,
      "cache": true,
      "cacheLocation": "node_modules/.cache/eslint-webpack-plugin/.eslintcache",
      "emitError": true,
      "emitWarning": true,
      "extensions": "js",
      "failOnError": true,
      "ignore": false,
      "overrideConfig": Object {
        "parser": "@babel/eslint-parser",
        "parserOptions": Object {
          "ecmaFeatures": Object {
            "modules": true,
          },
          "ecmaVersion": 6,
          "sourceType": "module",
        },
        "plugins": Array [
          "@americanexpress/one-app",
        ],
        "rules": Object {
          "@americanexpress/one-app/no-app-config-on-client": "error",
          "no-restricted-imports": Array [
            "error",
            "create-react-class",
          ],
          "no-restricted-modules": Array [
            "error",
            "create-react-class",
          ],
        },
      },
      "resourceQueryExclude": Array [],
      "useEslintrc": false,
    },
    "run": [Function],
  },
  LoaderOptionsPlugin {
    "options": Object {
      "debug": false,
      "minimize": true,
      "test": Object {
        "test": [Function],
      },
    },
  },
]
`;

exports[`webpack/one-amex.base should only include the EnvironmentPlugin in development 1`] = `
Array [
  EnvironmentPlugin {
    "defaultValues": Object {},
    "keys": Array [
      "NODE_ENV",
    ],
  },
  ESLintWebpackPlugin {
    "key": "ESLintWebpackPlugin",
    "options": Object {
      "allowInlineConfig": false,
      "cache": true,
      "cacheLocation": "node_modules/.cache/eslint-webpack-plugin/.eslintcache",
      "emitError": true,
      "emitWarning": true,
      "extensions": "js",
      "failOnError": true,
      "ignore": false,
      "overrideConfig": Object {
        "parser": "@babel/eslint-parser",
        "parserOptions": Object {
          "ecmaFeatures": Object {
            "modules": true,
          },
          "ecmaVersion": 6,
          "sourceType": "module",
        },
        "plugins": Array [
          "@americanexpress/one-app",
        ],
        "rules": Object {
          "@americanexpress/one-app/no-app-config-on-client": "error",
          "no-restricted-imports": Array [
            "error",
            "create-react-class",
          ],
          "no-restricted-modules": Array [
            "error",
            "create-react-class",
          ],
        },
      },
      "resourceQueryExclude": Array [],
      "useEslintrc": false,
    },
    "run": [Function],
  },
]
`;
